# Deep-Egg-Segmentation-and-Sizing

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: check-file-size.yml  main.yml
docker/: entrypoint.sh
src/egg_segmentation_size/: __init__.py  logging.py  main.py  segmentor.py
src/egg_segmentation_size/model/: egg_segmentor.pt
tests/: test_logging.py  test_main.py  test_segmentor.py
